# Neo

./: .gitignore  CLAUDE.md  README.md  design.md  pyproject.toml
.github/workflows/: test_ubuntu.yml  test_windows.yml
PhysicsModules/AstroNeo/: README.md
PhysicsModules/AstroNeo/astro_neo/: __init__.py  astro_neo.py  helper.py  input_arg.py  model.py  parser.py  problem.py
PhysicsModules/AstroNeo/tests/: test_astro_neo.py  test_model.py  test_parser.py  test_problem.py
PhysicsModules/EXAFS/: README.md  run_tests
PhysicsModules/EXAFS/exafs_neo/: _version.py  exafs.py  exafs_pop.py  exafsfileobj.py  helper.py  individual.py  ini_parser.py  input_arg.py  neoCrossOver.py  neoFilePars.py  neoMutator.py  neoPars.py  neoResult.py  neoSelector.py  neoSolver.py  parser.py  pathObj.py  pathrange.py  pathrange_file.py  problem.py  utils.py
PhysicsModules/EXAFS/exafs_neo/analysis/: EXAFS_Analysis.py  larch_score.py
PhysicsModules/EXAFS/exafs_neo/gui/: Analysis_plot.py  Background_plot.py  Console.py  Misc_Function.py  XAFS_GUI.py  feff_folder_larch.py  initalize_sabcor.sh
PhysicsModules/EXAFS/tests/: __init__.py  test_EXAFS_analysis.py  test_exafs_fileobj.py  test_exafs_pars.py  test_exafs_pathObj.py  test_exafs_pathrange.py  test_helper.py  test_individual.py  test_ini_parser.py  test_larchscore.py  test_neo_pop.py  test_neocrossover.py  test_neomutator.py  test_neosolver.py  test_utils.py  test_utils_mapping.py
PhysicsModules/EXAFS/tests/cu_test_files/cu_results/: run1_data.csv
PhysicsModules/NanoIndentation/: README.md
PhysicsModules/NanoIndentation/nanoindentation_neo/: __init__.py  helper.py  input_arg.py  nano_indent.py  nano_neo_data.py  parser.py  pathObj.py  problem.py
PhysicsModules/NanoIndentation/nanoindentation_neo/gui/: NanoIndent_Analysis.py  __init__.py
PhysicsModules/NanoIndentation/tests/: synthetic.py  test_data.py  test_nano_neo.py  test_parser.py  test_problem.py
PhysicsModules/XPS/: README.md  constraints.txt  pytest.ini  requirements-dev.txt
PhysicsModules/XPS/datafile/: DeltaPux1000.txt
PhysicsModules/XPS/tests/: conftest.py  test_scaffold.py
PhysicsModules/XPS/tests/component/: generate_references.py  shapes.py  test_shapes.py
PhysicsModules/XPS/tests/component/references/: bkgn_baseline.npy  bkgn_linear.npy  bkgn_shirley.npy  bkgn_svsc.npy  peak_doniach_sunjic_singlet.npy  peak_double_lorentzian_coster_kronig.npy  peak_double_lorentzian_doublet.npy  peak_double_lorentzian_singlet.npy  peak_gaussian_singlet.npy  peak_lorentzian_singlet.npy  peak_voigt_doublet.npy  peak_voigt_singlet.npy  periodic_table_reference.json
PhysicsModules/XPS/tests/golden/: CHANGELOG.md  analysis_driver.py  canonicalize.py  run_analysis.py  run_case.py  test_golden.py  tol_compare.py
PhysicsModules/XPS/tests/golden/cases/: doniach_shirley.ini  double_lorentzian_doublet.ini  gaussian_linear.ini  lorentzian_baseline.ini  two_peak_limited_correlated.ini  voigt_baseline_svsc.ini  voigt_coster_kronig.ini  voigt_de_mode.ini  voigt_shirley.ini
PhysicsModules/XPS/tests/golden/expected/doniach_shirley/: generations.txt  params.csv
PhysicsModules/XPS/tests/golden/expected/double_lorentzian_doublet/: generations.txt  params.csv
PhysicsModules/XPS/tests/golden/expected/gaussian_linear/: generations.txt  params.csv
PhysicsModules/XPS/tests/golden/known_broken/: README.md  voigt_peak_adding.ini  voigt_tougaard2.ini  voigt_tougaard3.ini
PhysicsModules/XPS/tests/unit/: test_individual.py  test_ini_parser.py  test_periodic_table.py
PhysicsModules/XPS/xps_neo/: __init__.py  helper.py  import_lib.py  ini_parser.py  input_arg.py  loss.py  parser2.py  periodic_table.py  periodic_table_data.py  problem.py  xps.py  xps_composition_information.py  xps_data.py  xps_fit.py  xps_individual.py
PhysicsModules/XPS/xps_neo/gui/: xps_analysis2.py  xps_neo_gui.py  xps_plot.py
PhysicsModules/common/: cli.py  colors.py
Solvers/: README.md  __init__.py
Solvers/cmaes/: __init__.py  cmaes_solver.py
Solvers/core/: __init__.py  base_solver.py  individual.py  parameter_space.py  population.py  problem.py  refinement.py  result.py  run_state.py
Solvers/de/: __init__.py  de_solver.py
Solvers/demcmc/: __init__.py  bnn_problem.py  demcmc_solver.py  hyper_mutation.py  mlp.py  mutation.py  posterior.py  refinement.py
Solvers/ga/: __init__.py  crossovers.py  ga_solver.py  mutators.py  selectors.py
Solvers/pso/: __init__.py  pso_solver.py
Solvers/tests/: test_core.py  test_demcmc.py  test_ga_operators.py  test_solvers.py  toy_problem.py
(+12 files in other folders)
