[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exafs_neo"
description = "exafs_neo AI analysis using GA"
readme = "README.md"
license = {text = "GPLv3"}
keywords = ["exafs_neo", "AI", "analysis"]
requires-python = ">=3.9"
version = "2.0.19"

authors = [
    {name = "Miu Lun Lau,", email = "andylau@u.boisestate.edu"},
    {name = "Jeff Terry", email = "terryj@illinoistech.edu"},
    {name = "Min Long", email = "minlong@boisestate.edu"},
]


# Base install (Solvers only): numpy. Each physics module's own third-party
# dependencies are optional extras below, so installing one module doesn't
# force the others' (e.g. NanoIndentation shouldn't need xraylarch or numba).
# See README.md "Installing a single module" for the per-module commands.
dependencies = [
    "numpy",
]

[project.optional-dependencies]
exafs = ["xraylarch", "scipy", "attrs", "matplotlib", "psutil"]
# NanoIndentation's core fit needs only numpy (already in dependencies);
# matplotlib is for the optional printGraph output.
nanoindentation = ["matplotlib"]
xps = ["scipy", "numba", "matplotlib", "psutil"]
all = ["exafs_neo[exafs,nanoindentation,xps]"]
# AstroNeo has no extra here: its only third-party dependency is PyXspec
# (ships with a HEASOFT source build, not on PyPI) plus the optional ACX2
# local model (a separate personal/external package) -- see
# PhysicsModules/AstroNeo/README.md for manual setup.

[project.urls]
Homepage = "https://github.com/laumiulun/EXAFS_Neo"
Download = "https://github.com/laumiulun/EXAFS_Neo/tarball/master"

[project.scripts]
exafs_neo = "PhysicsModules.EXAFS.exafs_neo.input_arg:main"
exafs_neo_gui = "PhysicsModules.EXAFS.exafs_neo.gui.XAFS_GUI:main"
nano_neo = "PhysicsModules.NanoIndentation.nanoindentation_neo.input_arg:main"
xps_neo = "PhysicsModules.XPS.xps_neo.xps:main"
xps_neo_gui = "PhysicsModules.XPS.xps_neo.gui.xps_neo_gui:main"
astro_neo = "PhysicsModules.AstroNeo.astro_neo.input_arg:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Solvers*", "PhysicsModules*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
"PhysicsModules.EXAFS.exafs_neo.gui" = ["media/*"]
